<resources>
    <string name="app_name">Risk</string>

    <!--  login activity  -->
    <string name="login_info">Welcome to the \n fancy RISC Game!!!</string>
    <string name="login_login">Log in</string>
    <string name="login_signup">Sign up</string>
    <string name="login_name_hint">UserName</string>
    <string name="login_password_hint">Password</string>

    <!--  sign up activity  -->
    <string name="signup_password1_hint">Password</string>
    <string name="signup_password2_hint">Again</string>

    <!--  home fragment  -->
    <string name="home_all_room">rooms waiting for players</string>
    <string name="home_room_in">rooms you in</string>
    <string name="home_no_room_wait">Currently there are no rooms waiting for new player.</string>
    <string name="home_no_room_in">Currently you don\'t have any playing rooms.</string>

    <!--  update fragment  -->
    <string name="update_name_info">Username:</string>
    <string name="update_old_password">Old Password</string>
    <string name="update_new_password">New Password</string>
    <string name="update_submit">Submit</string>

    <!--  add roomInfo activity  -->
    <string name="add_room_name">Room Name</string>
    <string name="add_room_selected_map">Selected map:</string>
    <string name="add_room_unselected_map">not selected yet</string>
    <string name="add_room_create">Create</string>

    <!--  wait game activity  -->
    <string name="wait_game_prompt">Waiting for other player…</string>

    <!--  select territory activity  -->
    <string name="select_territory_next">Next</string>
    <string name="select_territory_finish">Finish</string>
    <string name="select_territory_step1">Step1:&#160;Please choose a group of territory</string>
    <string name="select_territory_step2">Step2:&#160;Please assign units to your territories</string>
    <string name="select_territory_unit_info">Units you have:</string>
    <string name="select_territory_territory_name">territory</string>
    <string name="select_territory_territory_units">units assign</string>

    <!--  play game activity  -->
    <string name="play_game_move_attack">Move/\nAttack</string>
    <string name="play_game_upgrade">Upgrade</string>
    <string name="play_game_done">Done</string>
    <string name="play_game_confirm">Confirm</string>
    <string name="play_game_decline">Decline</string>
    <string name="play_game_perform">Perform</string>
    <string name="play_game_chat">Chat Room</string>

    <!--  move & attack activity  -->
    <string name="move_attack_unit_info">The Units you sent:</string>

    <!--  upgrade activity  -->
    <string name="upgrade_total_cost">Total cost:</string>
    <string name="upgrade_upgrade_max_tech">Upgrade Max Tech Level:</string>
    <string name="upgrade_upgrade_unit">Upgrade Unit:</string>
    <string name="upgrade_upgrade_max_button">Upgrade</string>

    <!--  chat activity  -->
    <string name="chat_hint_enter_a_message">Type a message…</string>
    <string name="chat_hint_to_player">To:</string>
    <string name="chat_action_copy">Copy</string>
    <string name="chat_action_delete">Delete</string>

    <!-- radiate activity -->
    <string name="radiate_intro">Radiate action\nonce you perform the radiate action, target territory will not produce any resource forever</string>

    <string name="menu_home">Home</string>
    <string name="menu_update">Change Password</string>
    <string name="menu_about">About</string>

    <string name="nav_header_hello">Hello,&#160;</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
