<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.duke.ece651.riskclient.activity.SelectTerritoryActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/widget_app_bar"/>

    <LinearLayout
        android:id="@+id/layout_select_territory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="@dimen/normal_margin"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toTopOf="@id/bt_next">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_territory_step1"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_color"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/img_map"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_marginVertical="@dimen/normal_margin"
            android:src="@drawable/risk_img"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_territory_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_assign_units"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="@dimen/normal_margin"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toTopOf="@id/bt_next">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_territory_step2"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/tv_units_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normal_margin"
            android:text="@string/select_territory_unit_info"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_territory_territory_name"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_color"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_territory_territory_units"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_color"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/select_territory_next"
        style="@style/Widget.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
