<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.duke.ece651.riskclient.ui.PasswordFragment">

    <TextView
        android:id="@+id/tv_name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_name_info"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/small_margin_horizontal"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/text_color"
        android:text="test"
        app:layout_constraintStart_toEndOf="@id/tv_name_info"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_old_password"
        android:layout_margin="@dimen/normal_margin"
        app:passwordToggleEnabled="true"
        style="@style/Widget.Shrine.TextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_new_password"
        android:layout_margin="@dimen/normal_margin"
        app:passwordToggleEnabled="true"
        style="@style/Widget.Shrine.TextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/update_submit"
        android:textSize="@dimen/normal_text_size"
        style="@style/Widget.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til2"/>

</androidx.constraintlayout.widget.ConstraintLayout>
