<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.duke.ece651.riskclient.activity.NewRoomActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_room_name"
        android:layout_margin="@dimen/normal_margin"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        style="@style/Widget.Shrine.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/map_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/add_room_selected_map"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_room_name"/>

    <TextView
        android:id="@+id/tv_map_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/add_room_unselected_map"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@id/map_name"
        app:layout_constraintTop_toBottomOf="@id/til_room_name"/>

    <ImageView
        android:id="@+id/img_map"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:layout_margin="@dimen/large_margin"
        android:src="@drawable/risk_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_map_name"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_map_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_map"
        app:layout_constraintBottom_toTopOf="@id/bt_create"/>

    <Button
        android:id="@+id/bt_create"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="wrap_content"
        android:text="@string/add_room_create"
        android:textSize="@dimen/normal_text_size"
        android:layout_margin="@dimen/normal_margin"
        style="@style/Widget.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
